# whisper-diarize

./: .gitignore  Makefile  README.md  pyproject.toml
.firecrawl/: aishell4.md  picovoice-diarization.md  pyannote-benchmark.md  search-chinese-dataset.json  search-eval-datasets.json
.github/workflows/: macos-app.yml
app/: Package.swift  README.md
app/.swiftpm/xcode/package.xcworkspace/xcuserdata/jacobwang.xcuserdatad/: UserInterfaceState.xcuserstate
app/.swiftpm/xcode/xcuserdata/jacobwang.xcuserdatad/xcschemes/: xcschememanagement.plist
app/Sources/Minutes/: App.swift  AppDesign.swift  ContentView.swift  DropZoneView.swift  ErrorView.swift  Info.plist  ProcessingView.swift  SettingsView.swift  TranscriptView.swift  TranscriptionRunner.swift
app/Sources/Minutes/Resources/: AppIcon.icns
app/Sources/WhisperDiarize/: App.swift  ContentView.swift  DropZoneView.swift  ErrorView.swift  ProcessingView.swift  SettingsView.swift  TranscriptView.swift  TranscriptionRunner.swift
app/Sources/WhisperDiarize/Resources/: pyproject.toml  transcribe.py
app/Tests/MinutesTests/: TranscriptParserTests.swift
app/UITests/MinutesUITests/: AppUITests.swift
eval/: eval.py  report.json
eval/cases/synth_zh_4spk/: hypothesis.rttm  hypothesis.txt  reference.rttm  reference.txt
scripts/: package-macos.sh
