[project]
name = "whisper-diarize"
version = "0.1.0"
description = "Fast audio transcription with speaker diarization — Apple Silicon optimized"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["whisper", "diarization", "transcription", "apple-silicon", "mlx", "pyannote"]
dependencies = [
    "mlx-whisper>=0.4.3",
    "pyannote-audio==4.0.4",
    "python-dotenv>=1.2.2",
    "torch>=2.12.0",
]

[project.scripts]
transcribe = "transcribe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
