[project]
name = "whisper-diarize"
version = "0.1.0"
description = "Fast audio transcription with speaker diarization — Apple Silicon optimized"
requires-python = ">=3.11"
dependencies = [
    "jiwer>=4.0.0",
    "mlx-whisper>=0.4.3",
    "pyannote-audio==4.0.4",
    "pyannote-metrics>=4.1",
    "python-dotenv>=1.2.2",
    "torch>=2.12.0",
]
